--- a/holy-grail-layout/index.html
+++ b/holy-grail-layout/index.html
@@ -13,6 +13,14 @@
     <header class="flex-header">
         Header
     </header>
+    <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Services</li>                       
+                <li>Contact</li>
+            </ul>
+        </nav>
     <main class="flex-main">
         <leftsidebar class="flex-leftside-bar">
             Left side bar
